# ZaoP2P

./: README.md
.github/workflows/: android-build.yml  windows-build.yml
android/: .gitignore  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/zao/p2p/core/: NativeBridge.kt
android/app/src/main/kotlin/com/zao/p2p/: MainActivity.kt
android/app/src/main/kotlin/com/zao/p2p/chat/: ChatActivity.kt  ChatAdapter.kt  ChatMessage.kt
android/app/src/main/kotlin/com/zao/p2p/transport/: BleMeshManager.kt  WifiDirectManager.kt  WifiDirectPortExchange.kt
android/app/src/main/res/drawable/: bubble_incoming.xml  bubble_outgoing.xml
android/app/src/main/res/layout/: activity_chat.xml  item_file_message.xml  item_message.xml
android/app/src/main/res/values/: colors.xml
core/: Cargo.toml
core/src/: connection_manager.rs  discovery.rs  error.rs  ffi.rs  identity.rs  lib.rs  noise_session.rs  protocol.rs  signaling.rs  signaling_client.rs  storage.rs  stun_client.rs  transfer.rs  transport.rs
windows/src-tauri/: Cargo.toml  tauri.conf.json
windows/src-tauri/icons/: README.md
windows/src-tauri/src/: main.rs
windows/ui/: index.html
