[package]
name = "zao-transfer-core"
version = "0.1.0"
edition = "2021"

[lib]
# cdylib -> .so for Android JNI / .dll for Windows
# staticlib -> optional, for static linking scenarios
# rlib -> allows use as a normal Rust dependency (e.g. from Tauri)
crate-type = ["cdylib", "rlib"]

[dependencies]
rusqlite = { version = "0.31", features = ["bundled-sqlcipher"] }
snow = "0.9"
rand = "0.8"
rand_core = "0.6"
ed25519-dalek = { version = "2", features = ["rand_core"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }
sha2 = "0.10"
hex = "0.4"
chacha20poly1305 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
once_cell = "1"
uuid = { version = "1", features = ["v4"] }

# Async runtime -- required by quinn (QUIC) and mdns-sd.
tokio = { version = "1", features = ["rt-multi-thread", "net", "time", "sync", "macros", "fs", "io-util"] }

# QUIC transport: gives us multiplexed parallel streams (parallel chunks)
# over a single encrypted connection, with built-in congestion control.
quinn = "0.11"
rustls = { version = "0.23", features = ["ring"] }
rcgen = "0.13"

# LAN discovery
mdns-sd = "0.11"
socket2 = { version = "0.5", features = ["all"] }

# Internet mode: signaling client (WebSocket) for NAT traversal.
# STUN itself is hand-rolled in stun_client.rs (see that file for why --
# the wire format is simple enough that a minimal implementation is
# more reliable here than depending on a less-common crate's exact API
# surface, which is harder to verify without a compiler in this
# environment).
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"

# JNI bindings, only compiled for the Android target
[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"

[profile.release]
opt-level = 3
lto = true
