[package]
name = "zao-p2p-windows"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["dialog-open", "dialog-save", "fs-all"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zao-transfer-core = { path = "../../core" }
dirs = "5"
rand = "0.8"
hex = "0.4"
whoami = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]
